terraform/modules/vpc/main.tf
resource "aws_vpc" "this" {

  cidr_block = var.vpc_cidr

  enable_dns_support = true

  enable_dns_hostnames = true

  tags = {

    Name = "${var.project_name}-vpc"
  }
}

resource "aws_internet_gateway" "this" {

  vpc_id = aws_vpc.this.id

  tags = {

    Name = "${var.project_name}-igw"
  }
}

resource "aws_subnet" "public" {

  count = length(var.public_subnets)

  vpc_id = aws_vpc.this.id

  cidr_block = var.public_subnets[count.index]

  availability_zone = var.availability_zones[count.index]

  map_public_ip_on_launch = true

  tags = {

    Name = "${var.project_name}-public-subnet-${count.index + 1}"

    "kubernetes.io/role/elb" = "1"

    "kubernetes.io/cluster/ultimate-eks-cluster" = "shared"
  }
}

resource "aws_route_table" "public" {

  vpc_id = aws_vpc.this.id

  route {

    cidr_block = "0.0.0.0/0"

    gateway_id = aws_internet_gateway.this.id
  }

  tags = {

    Name = "${var.project_name}-public-rt"
  }
}

resource "aws_route_table_association" "public" {

  count = length(var.public_subnets)

  subnet_id = aws_subnet.public[count.index].id

  route_table_id = aws_route_table.public.id
}

resource "aws_security_group" "eks_cluster" {

  name = "${var.project_name}-eks-cluster-sg"

  description = "EKS Cluster Security Group"

  vpc_id = aws_vpc.this.id

  ingress {

    from_port = 443

    to_port = 443

    protocol = "tcp"

    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {

    from_port = 0

    to_port = 0

    protocol = "-1"

    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "eks_nodes" {

  name = "${var.project_name}-eks-nodes-sg"

  description = "EKS Nodes Security Group"

  vpc_id = aws_vpc.this.id

  ingress {

    from_port = 0

    to_port = 65535

    protocol = "tcp"

    self = true
  }

  ingress {

    from_port = 0

    to_port = 65535

    protocol = "tcp"

    security_groups = [
      aws_security_group.eks_cluster.id
    ]
  }

  egress {

    from_port = 0

    to_port = 0

    protocol = "-1"

    cidr_blocks = ["0.0.0.0/0"]
  }
}
