terraform/modules/vpc/network-acl.tf
resource "aws_network_acl" "public" {

  vpc_id = aws_vpc.this.id

  subnet_ids = aws_subnet.public[*].id

  ingress {

    protocol = "-1"

    rule_no = 100

    action = "allow"

    cidr_block = "0.0.0.0/0"

    from_port = 0

    to_port = 0
  }

  egress {

    protocol = "-1"

    rule_no = 100

    action = "allow"

    cidr_block = "0.0.0.0/0"

    from_port = 0

    to_port = 0
  }
}
